# chatflow

./: .clineignore  .env_template  pubspec.yaml
.clinerules/: basic_info.md  bloc.md  effective_dart.md  flutter_app_architecture.md  flutter_change_notifier.md  flutter_errors.md
ai_instructions/: frontend_specs.txt
android/app/: build.gradle.kts
api/: .env.example  .gitignore  README.md  pyproject.toml  test_app.py
api/.clinerules/: chatflow-development-guidelines.md
api/ai_instructions/: backend_specs.txt
api/app/: main.py
api/app/api/endpoints/: conversation.py
api/app/auth/: endpoints.py  service.py
api/app/core/: config.py  database.py
api/app/models/: conversation.py  user.py
api/app/schemas/: conversation.py
api/app/services/: ai_service.py  conversation_service.py  mcp_service.py
api/src/app/: main.py
api/src/app/api/endpoints/: conversation.py
api/src/app/auth/: endpoints.py  service.py
api/src/app/core/: database.py
api/src/app/models/: conversation.py  user.py
api/src/app/schemas/: auth.py
api/src/app/services/: ai_service.py
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/src/core/models/: conversation_model.dart  conversation_model.g.dart  message_model.dart  message_model.g.dart  user_model.dart  user_model.g.dart
lib/src/core/services/: error_handler_service.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Flutter/ephemeral/: Flutter-Generated.xcconfig  flutter_export_environment.sh
test/: user_model_test.dart
web/: index.html  manifest.json
(+14 files in other folders)
